[gd_scene load_steps=5 format=3 uid="uid://maxsekrbatm2"]

[ext_resource type="Script" path="res://scenes/characters/player.gd" id="1_4mgrp"]
[ext_resource type="Texture2D" uid="uid://ckw2y821106ln" path="res://icon.svg" id="1_e007o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8v1na"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_e007o")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vo1a"]
size = Vector2(12, 10)

[node name="Player" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 60
script = ExtResource("1_4mgrp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.109375, 0.109375)
sprite_frames = SubResource("SpriteFrames_8v1na")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_4vo1a")

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="CoolingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CoolingTimer" to="." method="gunCooling"]
